tests/parser/errors/invalid_struct_literal.ray
call(){}

// Just to enable second error
fn main() {}
1{}

